// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en GifGrid debe mostrar items cuando se cargan imagenes usando useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      url="https://lalala.com"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en GifGrid debe mostrarse correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
